# Home_Work_WEB_2

./: Note.py  README.md  contact_book.py  dockerfile  file_sorter.py  main.py  pyproject.toml  requirements.txt  task_for_birthday.py  weather.py
